// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveReport Handles environment being started 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "case_count": undefined,
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STARTING",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "name_type_index": undefined,
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "tags_index": undefined,
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "case_count": undefined,
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "suite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "status": "ready",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "status": "ready",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STARTING",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "name_type_index": undefined,
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "status": "ready",
              "status_override": null,
              "tags": Object {},
              "tags_index": undefined,
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "status": "ready",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport Loads report skeleton when mounted 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "case_count": Object {
          "failed": 0,
          "passed": 0,
        },
        "category": "testplan",
        "entries": Array [
          Object {
            "case_count": Object {
              "failed": 0,
              "passed": 0,
            },
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "case_count": Object {
                  "failed": 0,
                  "passed": 0,
                },
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "case_count": Object {
                      "failed": 0,
                      "passed": 0,
                    },
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "name_type_index": Set {
                      "testcaseName|testcase",
                      "SuiteName|suite",
                      "MultitestName|multitest",
                      "TestplanName|testplan",
                    },
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "entry_uids": Array [
                  "testcaseUID",
                ],
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "name_type_index": Set {
                  "SuiteName|suite",
                  "MultitestName|multitest",
                  "TestplanName|testplan",
                  "testcaseName|testcase",
                },
                "parent_uids": Array [
                  "TestplanUID",
                  "MultitestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "tags_index": Object {},
                "timer": Object {},
                "uid": "SuiteUID",
              },
            ],
            "entry_uids": Array [
              "SuiteUID",
            ],
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultitestName",
            "name_type_index": Set {
              "MultitestName|multitest",
              "TestplanName|testplan",
              "SuiteName|suite",
              "testcaseName|testcase",
            },
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "tags_index": Object {},
            "timer": Object {},
            "uid": "MultiTestUID",
          },
        ],
        "entry_uids": Array [
          "MultiTestUID",
        ],
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "name_type_index": Set {
          "TestplanName|testplan",
          "MultitestName|multitest",
          "SuiteName|suite",
          "testcaseName|testcase",
        },
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "case_count": Object {
            "failed": 0,
            "passed": 0,
          },
          "category": "testplan",
          "entries": Array [
            Object {
              "case_count": Object {
                "failed": 0,
                "passed": 0,
              },
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "case_count": Object {
                    "failed": 0,
                    "passed": 0,
                  },
                  "category": "suite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "case_count": Object {
                        "failed": 0,
                        "passed": 0,
                      },
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "name_type_index": Set {
                        "testcaseName|testcase",
                        "SuiteName|suite",
                        "MultitestName|multitest",
                        "TestplanName|testplan",
                      },
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "status": "ready",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "tags_index": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                  ],
                  "entry_uids": Array [
                    "testcaseUID",
                  ],
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "name_type_index": Set {
                    "SuiteName|suite",
                    "MultitestName|multitest",
                    "TestplanName|testplan",
                    "testcaseName|testcase",
                  },
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultitestUID",
                  ],
                  "part": null,
                  "status": "ready",
                  "status_override": null,
                  "tags": Object {},
                  "tags_index": Object {},
                  "timer": Object {},
                  "uid": "SuiteUID",
                },
              ],
              "entry_uids": Array [
                "SuiteUID",
              ],
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultitestName",
              "name_type_index": Set {
                "MultitestName|multitest",
                "TestplanName|testplan",
                "SuiteName|suite",
                "testcaseName|testcase",
              },
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "status": "ready",
              "status_override": null,
              "tags": Object {},
              "tags_index": Object {},
              "timer": Object {},
              "uid": "MultiTestUID",
            },
          ],
          "entry_uids": Array [
            "MultiTestUID",
          ],
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "name_type_index": Set {
            "TestplanName|testplan",
            "MultitestName|multitest",
            "SuiteName|suite",
            "testcaseName|testcase",
          },
          "parent_uids": Array [],
          "status": "ready",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport Parially refreshes the report on update. 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "suite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "status": "ready",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "status": "ready",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "status": "ready",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "status": "ready",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport Updates testcase state 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="running"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "case_count": Object {
          "failed": 0,
          "passed": 0,
        },
        "category": "testplan",
        "entries": Array [
          Object {
            "case_count": Object {
              "failed": 0,
              "passed": 0,
            },
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "case_count": Object {
                  "failed": 0,
                  "passed": 0,
                },
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "case_count": Object {
                      "failed": 0,
                      "passed": 0,
                    },
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "hash": 44444,
                    "logs": Array [],
                    "name": "testcaseName",
                    "name_type_index": Set {
                      "testcaseName|testcase",
                      "SuiteName|suite",
                      "MultitestName|multitest",
                      "TestplanName|testplan",
                    },
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultitestUID",
                      "SuiteUID",
                    ],
                    "status": "running",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "TestcaseUID",
                  },
                ],
                "entry_uids": Array [
                  "test_basic_assertions",
                ],
                "fix_spec_path": null,
                "hash": 33333,
                "name": "SuiteName",
                "name_type_index": Set {
                  "SuiteName|suite",
                  "MultitestName|multitest",
                  "TestplanName|testplan",
                  "testcaseName|testcase",
                },
                "parent_uids": Array [
                  "TestplanUID",
                  "MultitestUID",
                ],
                "part": null,
                "status": "running",
                "status_override": null,
                "tags": Object {},
                "tags_index": Object {},
                "timer": Object {},
                "uid": "SuiteUID",
              },
            ],
            "entry_uids": Array [
              "SuiteUID",
            ],
            "fix_spec_path": null,
            "hash": 22222,
            "name": "MultitestName",
            "name_type_index": Set {
              "MultitestName|multitest",
              "TestplanName|testplan",
              "SuiteName|suite",
              "testcaseName|testcase",
            },
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "running",
            "status_override": null,
            "tags": Object {},
            "tags_index": Object {},
            "timer": Object {},
            "uid": "MultitestUID",
          },
        ],
        "entry_uids": Array [
          "MultitestUID",
        ],
        "hash": 11111,
        "meta": Object {},
        "name": "TestplanName",
        "name_type_index": Set {
          "TestplanName|testplan",
          "MultitestName|multitest",
          "SuiteName|suite",
          "testcaseName|testcase",
        },
        "parent_uids": Array [],
        "status": "running",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "case_count": Object {
            "failed": 0,
            "passed": 0,
          },
          "category": "testplan",
          "entries": Array [
            Object {
              "case_count": Object {
                "failed": 0,
                "passed": 0,
              },
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "case_count": Object {
                    "failed": 0,
                    "passed": 0,
                  },
                  "category": "suite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "case_count": Object {
                        "failed": 0,
                        "passed": 0,
                      },
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "hash": 44444,
                      "logs": Array [],
                      "name": "testcaseName",
                      "name_type_index": Set {
                        "testcaseName|testcase",
                        "SuiteName|suite",
                        "MultitestName|multitest",
                        "TestplanName|testplan",
                      },
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultitestUID",
                        "SuiteUID",
                      ],
                      "status": "running",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "tags_index": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "TestcaseUID",
                    },
                  ],
                  "entry_uids": Array [
                    "test_basic_assertions",
                  ],
                  "fix_spec_path": null,
                  "hash": 33333,
                  "name": "SuiteName",
                  "name_type_index": Set {
                    "SuiteName|suite",
                    "MultitestName|multitest",
                    "TestplanName|testplan",
                    "testcaseName|testcase",
                  },
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultitestUID",
                  ],
                  "part": null,
                  "status": "running",
                  "status_override": null,
                  "tags": Object {},
                  "tags_index": Object {},
                  "timer": Object {},
                  "uid": "SuiteUID",
                },
              ],
              "entry_uids": Array [
                "SuiteUID",
              ],
              "fix_spec_path": null,
              "hash": 22222,
              "name": "MultitestName",
              "name_type_index": Set {
                "MultitestName|multitest",
                "TestplanName|testplan",
                "SuiteName|suite",
                "testcaseName|testcase",
              },
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "status": "running",
              "status_override": null,
              "tags": Object {},
              "tags_index": Object {},
              "timer": Object {},
              "uid": "MultitestUID",
            },
          ],
          "entry_uids": Array [
            "MultitestUID",
          ],
          "hash": 11111,
          "meta": Object {},
          "name": "TestplanName",
          "name_type_index": Set {
            "TestplanName|testplan",
            "MultitestName|multitest",
            "SuiteName|suite",
            "testcaseName|testcase",
          },
          "parent_uids": Array [],
          "status": "running",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles individual test suites being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "case_count": undefined,
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "name_type_index": undefined,
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "running",
                "status_override": null,
                "tags": Object {},
                "tags_index": undefined,
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "case_count": undefined,
                  "category": "suite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "status": "ready",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "name_type_index": undefined,
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "status": "running",
                  "status_override": null,
                  "tags": Object {},
                  "tags_index": undefined,
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "status": "ready",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "status": "ready",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles individual testcases being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "case_count": undefined,
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "name_type_index": undefined,
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "running",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": undefined,
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "suite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "case_count": undefined,
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "name_type_index": undefined,
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "status": "running",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "tags_index": undefined,
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "status": "ready",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "status": "ready",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "status": "ready",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles navigation entries being clicked 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "suite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "status": "ready",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "status": "ready",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "status": "ready",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "status": "ready",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
        Object {
          "category": "multitest",
          "description": null,
          "entries": Array [
            Object {
              "category": "suite",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testcase",
                  "description": null,
                  "entries": Array [],
                  "env_status": null,
                  "hash": 12345,
                  "logs": Array [],
                  "name": "testcaseName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                    "SuiteUID",
                  ],
                  "status": "ready",
                  "status_override": null,
                  "suite_related": false,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestCaseReport",
                  "uid": "testcaseUID",
                },
              ],
              "env_status": null,
              "fix_spec_path": null,
              "hash": 12345,
              "name": "SuiteName",
              "parent_uids": Array [
                "TestplanUID",
                "MultiTestUID",
              ],
              "part": null,
              "status": "ready",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "SuiteUID",
            },
          ],
          "env_status": "STOPPED",
          "fix_spec_path": null,
          "hash": 12345,
          "name": "MultiTestName",
          "parent_uids": Array [
            "TestplanUID",
          ],
          "part": null,
          "status": "ready",
          "status_override": null,
          "tags": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "MultiTestUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles tests being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "case_count": undefined,
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "name_type_index": undefined,
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "running",
            "status_override": null,
            "tags": Object {},
            "tags_index": undefined,
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "case_count": undefined,
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "suite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "status": "ready",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "status": "ready",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "name_type_index": undefined,
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "status": "running",
              "status_override": null,
              "tags": Object {},
              "tags_index": undefined,
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "status": "ready",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;
